Adds support for path-based routing
Services that wish to be routed to by path
now just need to add a haproxy-pbr-name label.
This label should contain a regex for paths that
should route to the service.

The make target push-pbr creates and pushes an
image that will monitor pods with the haproxy-pbr-name
label. The monitor process writes config for haproxy
that routes to the service if the request path matches
the haproxy-pbr-name regex.

--- a/cluster/addons/haproxy-sni/images/Makefile
+++ b/cluster/addons/haproxy-sni/images/Makefile
@@ -4,6 +4,10 @@
 # pushing an image to gcr.io
 TAG = 1.0
 
+haproxy_sni:
+	godep go test .
+	go build -o haproxy-monitor .
+
 build:	haproxy_sni
 	#docker build -t gcr.io/google_containers/haproxy_sni:$(TAG) .
 	docker build -t registry.int.brkt.net/brkt/haproxy-sni:v1.0 .
@@ -12,9 +16,11 @@ push: build
 	docker push registry.int.brkt.net/brkt/haproxy-sni
 	#gcloud docker push gcr.io/google_containers/haproxy_sni:$(TAG)
 
-haproxy_sni:
-	godep go test .
-	go build -o haproxy-monitor .
+build-pbr: haproxy_sni
+	docker build -t registry.int.brkt.net/brkt/haproxy-pbr:v1.0 .
+
+push-pbr: build-pbr
+	docker push registry.int.brkt.net/brkt/haproxy-pbr
 
 clean:
-	rm monitor
+	rm haproxy-monitor
