Adds default route to pbr haproxy
pbr haproxy now has default route to
wherever lookupCNAME(yetiapi.internal)
points. This means that if the incoming
request doesnt match any of the configured
path regexes, the request should be routed
to the old API.

amendment 1: added * after {SNI} in haproxy
config template. You cannot put '*' in an
rc so we'll just always do it. Haproxy
now matches paths that are haproxy-pbr-name*

amendment 2: now removes pods that dont match
the sni of an existing service even if their
IPs match

this commit might be squashable

--- a/cluster/addons/haproxy-sni/images/Makefile
+++ b/cluster/addons/haproxy-sni/images/Makefile
@@ -2,7 +2,7 @@
 
 # The current value of the tag to be used for building and
 # pushing an image to gcr.io
-TAG = 1.0
+TAG = 1.1
 
 haproxy_sni:
 	godep go test .
@@ -10,7 +10,7 @@ haproxy_sni:
 
 build:	haproxy_sni
 	#docker build -t gcr.io/google_containers/haproxy_sni:$(TAG) .
-	docker build -t registry.int.brkt.net/brkt/haproxy-sni:v1.0 .
+	docker build -t registry.int.brkt.net/brkt/haproxy-sni:v$(TAG) .
 
 push: build
 	docker push registry.int.brkt.net/brkt/haproxy-sni
