--- a/cluster/addons/haproxy-sni/images/Makefile
+++ b/cluster/addons/haproxy-sni/images/Makefile
@@ -2,7 +2,8 @@
 
 # The current value of the tag to be used for building and
 # pushing an image to gcr.io
-TAG = 1.2
+TAG = 1.3
+PBR_TAG = 1.1
 
 haproxy_sni:
 	godep go test .
@@ -17,7 +18,7 @@ push: build
 	#gcloud docker push gcr.io/google_containers/haproxy_sni:$(TAG)
 
 build-pbr: haproxy_sni
-	docker build -t registry.int.brkt.net/brkt/haproxy-pbr:v1.0 .
+	docker build -t registry.int.brkt.net/brkt/haproxy-pbr:v$(PBR_TAG) .
 
 push-pbr: build-pbr
 	docker push registry.int.brkt.net/brkt/haproxy-pbr
